docs/v5.6.1/_sources/gallery/experiment/coreshell/Qback_vs_corediameter.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/experiment/coreshell/Qback_vs_corediameter.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_gallery_experiment_coreshell_Qback_vs_corediameter.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_experiment_coreshell_Qback_vs_corediameter.py:


CoreShell: Qback vs Core Diameter
=======================================

This example demonstrates how to compute and visualize the backscattering efficiency (Qback)
as functions of core diameter for CoreShell scatterers using PyMieSim.

.. GENERATED FROM PYTHON SOURCE LINES 10-11

Importing the package dependencies: numpy, PyMieSim

.. GENERATED FROM PYTHON SOURCE LINES 11-51

.. code-block:: Python

    import numpy
    from PyMieSim import (
        ureg,
        CoreShellSet,
        GaussianSet,
        PolarizationSet,
        Experiment,
        print_available,
        SellmeierMaterial,
        TabulatedMaterial,
        SellmeierMedium,
    )


    print_available()

    polarization_set = PolarizationSet(
        angles=[0.0] * ureg.degree,
    )

    source = GaussianSet(
        wavelength=[800, 900, 1000] * ureg.nanometer,
        polarization=polarization_set,
        optical_power=[1e-3] * ureg.watt,
        numerical_aperture=[0.2],
    )

    scatterer = CoreShellSet(
        core_diameter=numpy.geomspace(100, 900, 400) * ureg.nanometer,
        shell_thickness=[800] * ureg.nanometer,
        core_material=[TabulatedMaterial(material_name="silver")],
        shell_material=[SellmeierMaterial(material_name="BK7")],
        medium=[SellmeierMedium(material_name="water")],
    )

    experiment = Experiment(scatterer_set=scatterer, source_set=source)

    result = experiment.get("Qback")

    result.plot(x="scatterer:core_diameter")



.. image-sg:: /gallery/experiment/coreshell/images/sphx_glr_Qback_vs_corediameter_001.png
   :alt: Qback vs corediameter
   :srcset: /gallery/experiment/coreshell/images/sphx_glr_Qback_vs_corediameter_001.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    BK7            sellmeier  specs/SCHOTT-optical/P-BK7
    aluminium      tabulated  main/Al/Rakic
    fused_silica   sellmeier  main/SiO2/Malitson
    gold           tabulated  main/Au/Olmon-ev
    silver         tabulated  main/Ag/Johnson
    water          sellmeier  main/H2O/Daimon-19.0C

    [<matplotlib.lines.Line2D object at 0x7fe30c020cd0>, <matplotlib.lines.Line2D object at 0x7fe30c7f8a50>, <matplotlib.lines.Line2D object at 0x7fe30c7fb3d0>]




.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (0 minutes 0.177 seconds)


.. _sphx_glr_download_gallery_experiment_coreshell_Qback_vs_corediameter.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: Qback_vs_corediameter.ipynb <Qback_vs_corediameter.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: Qback_vs_corediameter.py <Qback_vs_corediameter.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: Qback_vs_corediameter.zip <Qback_vs_corediameter.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
